Made shitload of changes

--- a/bmiconfig.cfg
+++ b/bmiconfig.cfg
@@ -1,6 +1,6 @@
 # This section is to denote which filesystem is being used
 [filesystem]
-ceph = <true or false> # Right now only ceph is supported
+ceph = <true or false> 
 
 # This section is for ceph config
 [ceph]
@@ -18,3 +18,10 @@ url = <base url for haas>
 # will be replaced with python script
 update_shell_url = <location of iscsci_update shell script>
 password = <sudo password for iscsi_update script>
+
+# this section is for rpc server config
+[rpc]
+name_server_ip = <ip of nameserver>
+name_server_port = <port of nameserver>
+rpc_server_ip = <ip of rpc server>
+rpc_server_port = <port of rpc server>
