Updated logs Fixed a iscsi bug

--- a/bmi_einstein.cfg
+++ b/bmi_einstein.cfg
@@ -25,3 +25,9 @@ name_server_ip = <ip of nameserver>
 name_server_port = <port of nameserver>
 rpc_server_ip = <ip of rpc server>
 rpc_server_port = <port of rpc server>
+
+# this section is for logs
+[logs]
+url = <logs folder url>
+debug = <true or false for debug mode>
+verbose = <true or false for verbose mode>
