--- a/bmi_picasso.cfg
+++ b/bmi_picasso.cfg
@@ -7,3 +7,9 @@ bind_port = <port to bind to>
 [rpc]
 name_server_ip = <ip of nameserver>
 name_server_port = <port of nameserver>
+
+# this section is for logs
+[logs]
+url = <logs folder url>
+debug = <true or false for debug mode>
+verbose = <true or false for verbose mode>
