Added CLI framework

--- a/bmi_einstein.cfg
+++ b/bmi_einstein.cfg
@@ -1,3 +1,11 @@
+# this section is for giving a unique id to bmi so that same pool can be used
+[identity]
+uid = <unique number>
+
+# this section is for db settings
+[db]
+url = <location of sqlite db>
+
 # This section is to denote which filesystem is being used
 [filesystem]
 ceph = <true or false> 
@@ -25,6 +33,11 @@ name_server_ip = <ip of nameserver>
 name_server_port = <port of nameserver>
 rpc_server_ip = <ip of rpc server>
 rpc_server_port = <port of rpc server>
+
+# this section is for specifying tftp settings
+[tftp]
+pxelinux_url = <path to pxelinux.cfg>
+ipxe_url = <path to location of ipxe files>
 
 # this section is for logs
 [logs]
