--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -39,6 +39,11 @@ rpc_server_port = <port of rpc server>
 pxelinux_url = <path to pxelinux.cfg>
 ipxe_url = <path to location of ipxe files>
 
+# this section is for http config
+[http]
+bind_ip = <ip to bind to>
+bind_port = <port to bind to>
+
 # this section is for logs
 [logs]
 url = <logs folder url>
