--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -23,6 +23,7 @@ url = <base url for haas>
 
 # This section is for iscsi related config
 [iscsi]
+ip = <ip of iscsi server>
 # will be replaced with python script
 update_shell_url = <location of iscsci_update shell script>
 password = <sudo password for iscsi_update script>
