Added code to remake mappings

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -1,6 +1,8 @@
-# this section is for giving a unique id to bmi so that same pool can be used
-[identity]
+# this section is for basic bmi settings
+[bmi]
+# uid is given so that images dont clash in ceph pool
 uid = <unique number>
+service = <true or false>
 
 # this section is for db settings
 [db]
