Made some changes

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -8,23 +8,19 @@ service = <true or false>
 [db]
 url = <location of sqlite db>
 
-# This section is to denote which filesystem is being used
-[filesystem]
-ceph = <true or false> 
-
 # This section is for ceph config
-[ceph]
+[fs.ceph]
 id = <id in ceph>
 pool = <the ceph pool to use>
 conf_file = <location of ceph config file
 keyring = <location of ceph key ring>
 
-# This section is for haas related config
-[haas]
-url = <base url for haas>
+# This section is for hil related config
+[netiso.hil]
+url = <base url for hil>
 
-# This section is for iscsi related config
-[iscsi]
+# This section is for tgt related config
+[iscsi.tgt]
 ip = <ip of iscsi server>
 password = <sudo password for iscsi_update script>
 
