Updated config again Working with TGT Better import method inspired from HIL

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -9,18 +9,21 @@ service = <true or false>
 url = <location of sqlite db>
 
 # This section is for ceph config
-[fs.ceph]
+[fs]
+driver = <module path to driver>
 id = <id in ceph>
 pool = <the ceph pool to use>
 conf_file = <location of ceph config file
 keyring = <location of ceph key ring>
 
 # This section is for hil related config
-[netiso.hil]
+[netiso]
+driver = <module path to driver>
 url = <base url for hil>
 
 # This section is for tgt related config
-[iscsi.tgt]
+[iscsi]
+driver = <module path to driver>
 ip = <ip of iscsi server>
 password = <sudo password for iscsi_update script>
 
