didn’t convert ports to int (+2 squashed commits) Squashed commits: [7e90d39] pep8 fixes [1f4b4ae] config changes

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -6,25 +6,24 @@ service = <true or false>
 
 # this section is for db settings
 [db]
-url = <location of sqlite db>
+path = <location of sqlite db>
 
-# This section is to denote which filesystem is being used
+# This section is filesystem related config
 [filesystem]
-ceph = <true or false> 
-
-# This section is for ceph config
-[ceph]
+driver = <driver to load>
 id = <id in ceph>
 pool = <the ceph pool to use>
 conf_file = <location of ceph config file
 keyring = <location of ceph key ring>
 
-# This section is for haas related config
-[haas]
+# This section is for network isolator (HIL) related config
+[net_isolator]
+driver = <driver to load>
 url = <base url for haas>
 
 # This section is for iscsi related config
 [iscsi]
+driver = <driver to load>
 ip = <ip of iscsi server>
 password = <sudo password for iscsi_update script>
 
@@ -37,16 +36,22 @@ rpc_server_port = <port of rpc server>
 
 # this section is for specifying tftp settings
 [tftp]
-pxelinux_url = <path to pxelinux.cfg>
-ipxe_url = <path to location of ipxe files>
+pxelinux_path = <path to pxelinux.cfg>
+ipxe_path = <path to location of ipxe files>
 
 # this section is for http config
+# Should think of a better name for this section
 [http]
 bind_ip = <ip to bind to>
 bind_port = <port to bind to>
 
 # this section is for logs
 [logs]
-url = <logs folder url>
+path = <logs folder url>
 debug = <true or false for debug mode>
 verbose = <true or false for verbose mode>
+
+# Tests section for unit tests (Optional)
+[test]
+# All Parameters for tests
+# Should not be there in Production
