--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,5 @@ language: python
 python:
   - "2.7"
 
-install:
-  - pip install pep8
-
 script:
-    # Run pep8 on all .py files in all subfolders
-    # ignore "E402: module level import not at top of file"
-    - find . -name \*.py -exec pep8 --ignore=E402 {} +
+  - echo "Hello"
