pep8 fix (+6 squashed commits) Squashed commits: [2e7a0d0] added validation of options [1f3dba5] config updates [94b5d5b] fixes (Now Working)!! [11ce9d5] Finished writing framework and modifying TGT [2a90c29] added ip property [7c5e5d4] wrote initial driver framework

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -9,6 +9,7 @@ service = <true or false>
 path = <location of sqlite db>
 
 # This section is filesystem related config
+# Below Options are for ceph
 [filesystem]
 driver = <driver to load>
 id = <id in ceph>
@@ -17,15 +18,16 @@ conf_file = <location of ceph config file
 keyring = <location of ceph key ring>
 
 # This section is for network isolator (HIL) related config
+# Below Options are for HIL
 [net_isolator]
 driver = <driver to load>
 url = <base url for haas>
 
 # This section is for iscsi related config
+# Below Options are for TGT
 [iscsi]
 driver = <driver to load>
 ip = <ip of iscsi server>
-password = <sudo password for iscsi_update script>
 
 # this section is for rpc server config
 [rpc]
