# This is a combination of 32 commits. # The first commit's message is: first try
# This is the 2nd commit message:

Initial commit for mock iSCSI driver that should address issue#32

# This is the 3rd commit message:

End of line PEP8 violation

# This is the 4th commit message:

End of line PEP8 violation

# This is the 5th commit message:

Made small typo  changes and corrections

# This is the 6th commit message:

didn’t convert ports to int (+2 squashed commits)
Squashed commits:
[7e90d39] pep8 fixes
[1f4b4ae] config changes

# This is the 7th commit message:

Changed to declarative style

# This is the 8th commit message:

Pulled out parse_config
made changes to make config cleaner

# This is the 9th commit message:

Added type

# This is the 10th commit message:

service fix

# This is the 11th commit message:

HaaSException->HILException

# This is the 12th commit message:

change haas to hil

# This is the 13th commit message:

Add files via upload

# This is the 14th commit message:

Delete bmi test cases plan.odt

# This is the 15th commit message:

Create bmi_test_cases_plan

# This is the 16th commit message:

Update bmi_test_cases_plan

# This is the 17th commit message:

Delete bmi_test_cases_plan

# This is the 18th commit message:

Create bmi_test_cases_plan.md

# This is the 19th commit message:

Update bmi_test_cases_plan.md

# This is the 20th commit message:

Update bmi_test_cases_plan.md

# This is the 21st commit message:

Create bmi_api_test.md

# This is the 22nd commit message:

Update bmi_api_test.md

# This is the 23rd commit message:

Update bmi_api_test.md

# This is the 24th commit message:

Update bmi_api_test.md

# This is the 25th commit message:

Update bmi_api_test.md

# This is the 26th commit message:

Update bmi_api_test.md

# This is the 27th commit message:

Update bmi_api_test.md

# This is the 28th commit message:

haas to hil

# This is the 29th commit message:

haas to hil

# This is the 30th commit message:

haas to hil


--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -6,22 +6,23 @@ service = <true or false>
 
 # this section is for db settings
 [db]
-url = <location of sqlite db>
+path = <location of sqlite db>
 
-# This section is to denote which filesystem is being used
-[filesystem]
-ceph = <true or false> 
-
-# This section is for ceph config
-[ceph]
+# This section is filesystem related config
+[fs]
 id = <id in ceph>
 pool = <the ceph pool to use>
 conf_file = <location of ceph config file
 keyring = <location of ceph key ring>
 
-# This section is for haas related config
-[haas]
-url = <base url for haas>
+[driver]
+net_isolator = <driver to load>
+iscsi = <driver to load>
+fs = <driver to load>
+
+# This section is for network isolator (HIL) related config
+[net_isolator]
+url = <base url for hil>
 
 # This section is for iscsi related config
 [iscsi]
@@ -37,16 +38,21 @@ rpc_server_port = <port of rpc server>
 
 # this section is for specifying tftp settings
 [tftp]
-pxelinux_url = <path to pxelinux.cfg>
-ipxe_url = <path to location of ipxe files>
+pxelinux_path = <path to pxelinux.cfg>
+ipxe_path = <path to location of ipxe files>
 
 # this section is for http config
-[http]
-bind_ip = <ip to bind to>
-bind_port = <port to bind to>
+[rest_api]
+ip = <ip to bind to>
+port = <port to bind to>
 
 # this section is for logs
 [logs]
-url = <logs folder url>
+path = <logs folder url>
 debug = <true or false for debug mode>
 verbose = <true or false for verbose mode>
+
+# Tests section for unit tests (Optional)
+[test]
+# All Parameters for tests
+# Should not be there in Production
