bugfix: HAAS TO HIL

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -22,7 +22,7 @@ fs = <driver to load>
 
 # This section is for network isolator (HIL) related config
 [net_isolator]
-url = <base url for haas>
+url = <base url for hil>
 
 # This section is for iscsi related config
 [iscsi]
