Changed to declarative style

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -9,7 +9,7 @@ service = <true or false>
 path = <location of sqlite db>
 
 # This section is filesystem related config
-[filesystem]
+[fs]
 driver = <driver to load>
 id = <id in ceph>
 pool = <the ceph pool to use>
@@ -40,10 +40,9 @@ pxelinux_path = <path to pxelinux.cfg>
 ipxe_path = <path to location of ipxe files>
 
 # this section is for http config
-# Should think of a better name for this section
-[http]
-bind_ip = <ip to bind to>
-bind_port = <port to bind to>
+[rest_api]
+ip = <ip to bind to>
+port = <port to bind to>
 
 # this section is for logs
 [logs]
