Pulled out parse_config made changes to make config cleaner

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -10,20 +10,22 @@ path = <location of sqlite db>
 
 # This section is filesystem related config
 [fs]
-driver = <driver to load>
 id = <id in ceph>
 pool = <the ceph pool to use>
 conf_file = <location of ceph config file
 keyring = <location of ceph key ring>
 
+[driver]
+net_isolator = <driver to load>
+iscsi = <driver to load>
+fs = <driver to load>
+
 # This section is for network isolator (HIL) related config
 [net_isolator]
-driver = <driver to load>
 url = <base url for haas>
 
 # This section is for iscsi related config
 [iscsi]
-driver = <driver to load>
 ip = <ip of iscsi server>
 password = <sudo password for iscsi_update script>
 
