--- a/docker/bmi_config.cfg
+++ b/docker/bmi_config.cfg
@@ -22,7 +22,7 @@ fs = <driver to load>
 
 # This section is for network isolator (HIL) related config
 [net_isolator]
-url = 172.17.0.3:80
+url = http://hil:80
 
 # This section is for iscsi related config
 [iscsi]
