--- a/docker/haas.cfg
+++ b/docker/haas.cfg
@@ -27,21 +27,21 @@ dry_run=True
 haas.ext.switches.mock =
 haas.ext.obm.mock =
 
-haas.ext.network_allocators.null =
+#haas.ext.network_allocators.null =
 
 # Depending on what you're trying to do, you may want to use the vlan_pool
 # network allocator instead of the null allocator. To do this, comment out the
 # null allocator extension above, and uncomment the following:
 #
-# haas.ext.network_allocators.vlan_pool =
-#
-# [haas.ext.network_allocators.vlan_pool]
-# vlans = 100-200, 300-500
-
 haas.ext.auth.null =
+haas.ext.network_allocators.vlan_pool =
+
+[haas.ext.network_allocators.vlan_pool]
+vlans = 100-200, 300-500
+
 # Again, depending on what you're doing, you may want to change this to a
 # diffefrent authentication backend:
-# haas.ext.auth.database =
+#haas.ext.auth.database =
 # haas.ext.auth.keystone =
 #
 # If using the keystone backend, you'll also need to fill out this section:
