--- a/docker/bmi_config.cfg
+++ b/docker/bmi_config.cfg
@@ -22,7 +22,7 @@ fs = <driver to load>
 
 # This section is for network isolator (HIL) related config
 [net_isolator]
-url = http://hil:80
+url = http://172.17.0.3:7000
 
 # This section is for iscsi related config
 [iscsi]
@@ -51,3 +51,20 @@ port = 8000
 path = /var/log/bmi/
 debug = True
 verbose = False
+
+[tests]
+picasso_url = http://127.0.0.1:8000/
+correct_hil_username = haasadmin
+correct_hil_password = admin1234
+incorrect_hil_password = admin123##
+
+node_name = bmi_node
+nic = bmi_nic
+
+project = bmi_infra
+network = bmi_provision
+
+exist_img_name = bmi_test
+new_snap_name = test_snap
+not_exist_snap_name = hello
+not_exist_img_name = i12
