--- a/docker/haas.cfg
+++ b/docker/haas.cfg
@@ -17,7 +17,7 @@ libvirt_endpoint = qemu:///system
 endpoint = http://127.0.0.1:7000
 
 [database]
-uri = sqlite:////home/haas/haas.db
+uri = sqlite:////home/hil/haas.db
 #uri = postgresql://<username>:<password>@<address>/<dbname>
 
 [devel]
