Added explanation (+1 squashed commit) Squashed commits: [e3765f8] pep8 fix (+1 squashed commit) Squashed commits: [9c9d23a] removed sleep (+1 squashed commit) Squashed commits: [b311266] Probably fixed coverage issue (+2 squashed commits) Squashed commits: [4091791] naveds changes [8852a1c] Modified picasso tests to work with CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_script:
 
 script:
   # Run Tests in BMI container
-  - sudo docker exec bmi pytest -v --random-order-bucket=global --cov=ims --ignore tests/unit/picasso tests/
+  - sudo docker exec bmi pytest -v --random-order-bucket=global --cov=ims tests/
 
 after_success:
   # Submit Coverage to Coveralls
