Added lines for Ubuntu Installation

--- a/scripts/install/production/roles/dhcp/tasks/main.yml
+++ b/scripts/install/production/roles/dhcp/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 #This role instals and configures the DHCP server
 - name: Install dnsmasq
-  yum:
+  package:
     name: dnsmasq
 - name: Comment/uncomment options in dnsmasq.conf
   lineinfile:
