--- a/scripts/install/production/roles/pxe/tasks/main.yml
+++ b/scripts/install/production/roles/pxe/tasks/main.yml
@@ -1,8 +1,15 @@
 ---
 #This role installs and configures tftp-server
-- name: Install tftpboot
+- name: Install tftpboot for CentOS/RHEL
   yum:
     name: tftp-server
+    state: present
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+- name: Install tftpboot for Ubuntu
+  apt:
+    name: tftpd-hpa
+    state: present
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 - name: Create pxelinux directory
   file:
     path: /var/lib/tftpboot/pxelinux.cfg
