--- a/scripts/install/production/site.yml
+++ b/scripts/install/production/site.yml
@@ -2,10 +2,9 @@
 # This playbook deploys bmi, including the iscsi server and dhcp server.
 
 - hosts:  all
-  become: true
 
   roles:
-    - iscsi
+    - tgt
     - pxe
     - dhcp
     - bmi
