--- a/scripts/install/production/roles/dhcp/tasks/main.yml
+++ b/scripts/install/production/roles/dhcp/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-#This role instals and configures the DHCP server
+#This role installs and configures the DHCP server
 
 - name: Create pxelinux directory
   file:
@@ -25,18 +25,20 @@
     - { regexp: '#log-dhcp', line: 'log-dhcp' }
     - { regexp: 'conf-dir=/etc/dnsmasq.d', line: '#conf-dir=/etc/dnsmasq.d' }
 
+# This is just an example configuration. Modify to match your requirements.
+
 - name: Add DHCP configuration to dnsmasq.conf
   lineinfile:
     path: /etc/dnsmasq.conf
     line: "{{ item }}"
   become: true
   with_items:
-      - 'interface=eth3'
-      - 'dhcp-range=172.16.10.51,172.16.10.70,7d'
+      - 'interface=eth1'
+      - 'dhcp-range=192.168.39.51,192.168.39.70,7d'
       - 'enable-tftp'
       - 'tftp-root=/var/lib/tftpboot'
       - 'dhcp-userclass=set:ENH,iPXE'
-      - 'dhcp-boot=tag:!ENH,pxelinux.0,servername,172.16.10.1'
+      - 'dhcp-boot=tag:!ENH,pxelinux.0,servername,192.168.39.2'
 
 - name: Systemctl commands for dnsmasq
   systemd:
