--- a/scripts/install/production/roles/tgt/tasks/main.yml
+++ b/scripts/install/production/roles/tgt/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
-- name: Install Packages for Playbook
+#Install tgt and its necessary dependencies
+
+- name: Install packages for tgt CentOS installation
   package: name={{ item }} state=latest
   with_items:
    - gcc
@@ -8,14 +10,14 @@
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Change SELinux to permissive
+- name: Change SELinux to permissive for CentOS
   selinux:
     policy: targeted
     state: permissive
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Install EPEL repo
+- name: Install EPEL repo for CentOS
   yum:
     name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
     state: present
@@ -34,7 +36,7 @@
     state: present
   become: true
 
-- name: Install TGT for Debian/Ubuntu
+- name: Install TGT for Ubuntu
   apt: name={{ item }} state=latest
   with_items:
    - tgt
@@ -42,14 +44,14 @@
   become: true
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
-- name: Install Perl General config
+- name: Install Perl General config for CentOS
   yum: 
     name: perl-Config-General.noarch
     state: present
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Install Headers for tgt source compilation
+- name: Install headers for tgt source compilation for CentOS
   yum: name={{ item }} state=latest
   with_items:
    - librbd1-devel
@@ -58,13 +60,13 @@
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Install tgt from source
+- name: Install tgt from source for CentOS
   git: 
     repo: https://github.com/fujita/tgt
     dest: "{{playbook_dir}}/tgt"
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Make tgt
+- name: Make tgt for CentOS
   command: "{{ item }}"
   args:
     chdir: "{{ playbook_dir }}/tgt"
@@ -75,14 +77,14 @@
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Copy tgtd.service to system folder
+- name: Copy tgtd.service to system folder for CentOS
   copy:
     src: "{{playbook_dir}}/tgt/scripts/tgtd.service"
     dest: /usr/lib/systemd/system/
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Allow tcp via iptables
+- name: Allow tcp via iptables for CentOS
   iptables:
     chain: INPUT
     protocol: tcp
@@ -92,7 +94,7 @@
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Systemctl commands for tgtd
+- name: Systemctl commands for tgtd for CentOS
   systemd:
     name: tgtd.service
     daemon-reload: yes
