--- a/scripts/install/production/roles/tgt/tasks/main.yml
+++ b/scripts/install/production/roles/tgt/tasks/main.yml
@@ -7,6 +7,7 @@
    - gcc
    - cpan
    - make
+   - firewalld
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
@@ -84,13 +85,21 @@
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Allow tcp via iptables for CentOS
-  iptables:
-    chain: INPUT
-    protocol: tcp
-    match: tcp
-    destination_port: 3260
-    jump: ACCEPT
+- name: Systemctl commands for firewalld for CentOS
+  systemd:
+    name: firewalld.service
+    daemon-reload: yes
+    state: started
+    enabled: yes
+  become: true
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+
+- name: Allow tcp via firewalld for CentOS
+  firewalld:
+    port: 3260/tcp
+    permanent: true
+    immediate: true
+    state: enabled
   become: true
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
